Agregando Frontend de seccion contacto

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -122,7 +122,7 @@ html{
 .sobremi{
     background-color: #1e2326;
     color: #fff;
-    padding: 50px 20px;
+    padding: 75px 20px;
 }
 .sobremi .contenido-section{
     max-width: 1100px;
@@ -225,7 +225,7 @@ html{
 .skills{
     background-color: #1e2326;
     color: #fff;
-    padding: 50px 20px;
+    padding: 75px 20px;
 }
 .skills .contenido-section{
     max-width: 1100px;
@@ -273,7 +273,7 @@ html{
 .portafolio{
     background-color: #252A2E;
     color: #fff;
-    padding: 50px 20px;
+    padding: 75px 20px;
 }
 .portafolio .contenido-section{
     max-width: 1100px;
@@ -325,4 +325,66 @@ html{
 }
 .portafolio .galeria .proyecto .overlay:hover h3{
     margin-bottom: 0px;
+}
+
+/* Seccion Contacto */
+.contacto{
+    background-image: url(../img/contact_bg.png);
+    background-color: #1e2326;
+    color: #fff;
+    padding: 50px 0;
+}
+.contacto .contenido-seccion{
+    max-width: 1100px;
+    margin: auto;
+}
+.contacto h2{
+    font-size: 48px;
+    font-family: 'Righteous';
+    text-align: center;
+    padding: 50px 0;
+}
+.contacto .fila{
+    display: flex;
+}
+.contacto .col{
+    width: 100%;
+    padding: 10px;
+    position: relative;
+}
+.contacto .col input, .contacto .col textarea{
+    display: block;
+    width: 100%;
+    padding: 18px;
+    border: none;
+    margin-bottom: 20px;
+    background-color: #252A2E;
+    color: #fff;
+    font-size: 18px;
+}
+.contacto button{
+    cursor: pointer;
+    background-color: transparent;
+    border: 2px solid #fff;
+    width: fit-content;
+    display: block;
+    margin: 20px auto;
+    padding: 10px 22px;
+    font-size: 16px;
+    color: #fff;
+    position: relative;
+    z-index: 10;
+}
+.contacto button .overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background-color: #42A5F5;
+    z-index: -1;
+    transition: 1s;
+}
+.contacto button:hover .overlay{
+    width: 100%;
 }
