--- a/css/estilos.css
+++ b/css/estilos.css
@@ -415,6 +415,9 @@ footer .redes a{
     font-size: 20px;
     transition: .3s;
 }
+footer .redes a:hover{
+    background-color: #42A5F5;
+}
 footer .arriba{
     display: block;
     width: 50px;
@@ -428,4 +431,81 @@ footer .arriba{
     border-radius: 50%;
     line-height: 50px;
     font-size: 18px;
+}
+
+/* Responsive */
+@media screen and (max-width:980px){
+    nav{
+        display: none;
+    }
+    .nav-responsive{
+        display: block;
+    }
+    nav.responsive{
+        display: block;
+        position: absolute;
+        right: 0;
+        top: 75px;
+        background-color: #252A2E;
+        width: 180px;
+    }
+    nav.responsive ul{
+        display: block !important;
+    }
+    nav.responsive ul li{
+        border-bottom: 1px solid #fff;
+        padding: 10px 0;
+    }
+}
+@media screen and (max-width:700px){
+    .inicio{
+        margin: auto;
+        display: flex;
+        padding-top: 125px;
+    }
+    .sobremi .fila{
+        display: block;
+        margin: auto;
+    }
+    .sobremi .fila h3{
+        text-align: center;
+    }
+    .sobremi p{
+        text-align: justify;
+    }
+    .sobremi .fila .col{
+        width: fit-content;
+        margin: auto;
+    }
+    .skills .fila{
+        display: block;
+    }
+    .skills .fila .col{
+        width: 100%;
+    }
+    .skills .fila .col .contenedor-skills{
+        width: 100%;
+        margin: auto;
+    }
+    .skills .fila .col .contenedor-skills .skill{
+        width: 60%;
+    }
+    .portafolio .galeria{
+        display: block;
+        width: 100%;
+    }
+    .portafolio .galeria .proyecto{
+        max-width: 100%;
+    }
+    .portafolio .galeria .proyecto img{
+        width: 100%;
+        margin: 20px auto;
+        border-radius: 10px;
+    }
+    .contacto .fila{
+        display: block;
+    }
+    .contacto .fila .col{
+        width: 100%;
+    }
 }
