--- a/css/estilos.css
+++ b/css/estilos.css
@@ -442,6 +442,10 @@ footer .arriba{
     }
     .nav-responsive{
         display: block;
+        padding-top: 7px;
+        padding-right: 6px;
+        height: 32px;
+        width: 37px;
     }
     nav.responsive{
         display: block;
@@ -457,7 +461,13 @@ footer .arriba{
     nav.responsive ul li{
         border-bottom: 1px solid #fff;
         padding: 10px 0;
-        border-radius: 2px;
+    }
+    nav.responsive ul li a{
+        display: block;
+    }
+    .inicio{
+        background: linear-gradient(to top, rgba(30,35,38,1), rgba(30,35,38,.6)),
+        url(../img/j3.jpeg);
     }
     .portafolio .galeria .proyecto .overlay{
         background: linear-gradient(rgba(174, 214, 241,.6), rgba(174, 214, 241,.8));
